Bug 696739. Treat inline fieldsets as pseudo-stacking-contexts. r=bz